--- a/static/tracker_app/css/base.css
+++ b/static/tracker_app/css/base.css
@@ -17,24 +17,14 @@ a:hover {
 html,
 body {
     height: 100%;
-    background: url('../images/background.png') no-repeat center center fixed;
+    /* background: url('../images/hero-banner-alt.jpg') no-repeat center center fixed; */
+    background-color: rgb(253, 253, 253);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    font-family: 'Raleway', sans-serif;
 }
-
-body {
-    display: -ms-flexbox;
-    display: flex;
-    color: #000;
-    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-}
-
-.cover-container {
-  max-width: 42em;
-}
-
 
 /*
  * Header
@@ -49,6 +39,27 @@ body {
 .mastfoot {
   color: rgba(255, 255, 255, .5);
 }
+
+@media only screen and (max-width: 600px) {
+  .motto {
+    text-align: center;
+    font-size: 1.25rem !important;
+    margin-top: 0.25rem !important;
+  }
+
+  .intro-text {
+    font-size: 0.6rem !important;
+  }
+
+  #logo {
+    font-size: 1.75rem;
+  }
+
+  #home-illustration {
+    width: 70%;
+  }
+}
+
 
 .errorlist
 {
