--- a/templates/tracker_app/base.html
+++ b/templates/tracker_app/base.html
@@ -6,22 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'tracker_app/css/base.css' %}">
-
-    {% block style %} {% endblock %}
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&family=Raleway&display=swap" rel="stylesheet">
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-        <header class="masthead">
-            <a href="{% url 'home' %}">
-                <img src="{% static 'tracker_app/icons/home.svg' %}">
-            </a>
-        </header>
-    
+    <header class="container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="/"><h2 id="logo" style="font-family: 'PT Sans', sans-serif;">amazonTrack</h2></a>
+        </nav>    
+    </header>
+    <!-- <header class="masthead">
+        <a href="{% url 'home' %}">
+            <img src="{% static 'tracker_app/icons/home.svg' %}">
+        </a>
+    </header> -->
+    <main class="container">
         {% block content %} {% endblock %}
-    </div>
+    </main>
 
 
 </body>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 {% block scripts %} {% endblock %}
+
 </html>
