--- a/templates/tracker_app/home.html
+++ b/templates/tracker_app/home.html
@@ -2,28 +2,21 @@
 {% load static %}
 {% block title%} Home {% endblock %}
 {% block content%}
-<main role="main" class="text-center mt-5">
-    <h1 class="display-4">Never miss a price drop!</h1>
-    <p class="text-secondary">
-        <small>
-            We will notify you the moment there’s a better price on <img src="{% static 'tracker_app/icons/amazon.svg' %}"> 
+<div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-6 motto mt-5">
+        <h2 class="motto font-weight-bold mb-3">Never miss a price drop again!</h2>
+        <p class="intro-text text-muted">
+            Get notified when price drops on 
+            <img src="{% static 'tracker_app/images/amazon.png' %}" width="32" height="32" alt="Amazon"> 
             items you can’t stop thinking about.
-        </small>
-    </p>
-
-    <div class="row">
-        <div class="col-sm mt-2">
-            <a href="{% url 'register' %}" class="text-decoration-none">
-                <button type="button" class="btn btn-block btn-primary">Get started</button>
-            </a>
-        </div>
-        <div class="col-sm mt-2">
-            <a href="{% url 'home' %}" class="text-decoration-none">
-                <button type="button" class="btn btn-block btn-outline-primary">View currently tracked items</button>
-            </a>
-        </div>
+        </p>
+        <a class="btn btn-sm btn-dark mb-2" href="{% url 'register' %}">Get started</a>
+        <a class="btn btn-sm btn-outline-dark mb-2" href="#">View tracked items</a>
     </div>
-
+    <div class="col-md-5 d-flex justify-content-center">
+        <img src="{% static 'tracker_app/images/clip-online-shopping-7.png' %}" 
+        id="home-illustration" class="img-fluid">
     </div>
-</main>
+</div>
 {% endblock %}
