--- a/templates/tracker_app/register.html
+++ b/templates/tracker_app/register.html
@@ -5,10 +5,19 @@
 
 {% block content%}
 <div class="row">
-    <section class="col-md-7">
+    <section class="col-md-3 d-none d-md-flex flex-column justify-content-between">
+        <img src="{% static 'tracker_app/images/flame-1239.png' %}" 
+        class="img-fluid">
+        <img src="{% static 'tracker_app/images/cherry-online-shopping.png' %}" 
+        class="img-fluid">
+    </section>
+    <section class="col-md-6">
         <div class="card m-auto shadow-sm border-secondary" style="max-width: 32rem;">
             <div class="card-header">
-                <h4 class="my-0 font-weight-normal text-center">Track a new item</h4>
+                <h4 class="my-0 font-weight-normal text-center">
+                    <img src="https://img.icons8.com/plasticine/35/000000/order-shipped.png"/>
+                    Track a new item
+                </h4>
             </div>
             <div class="card-body form-group">
                 <form method="POST" onsubmit="displaySpinner()">
@@ -41,16 +50,23 @@
                         </div>
                         {% endif %}
                     {% endfor %}
-                    <button id="submit" class="btn btn-primary w-100 mt-3" type="submit">Register</button>
+                    <button id="submit" class="btn btn-dark w-100 mt-3" type="submit">Register</button>
+                    <div id="scrape-progress-wrapper" class="progress mt-3" style="display: none;">
+                        <div id="scrape-progress" class="progress-bar progress-bar-striped bg-success" 
+                            role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>    
     </section>
-
-    <section class="col-md-5 d-none d-md-flex justify-content-center">
+    <section class="col-md-3 d-none d-md-flex flex-column justify-content-between">
         <img src="{% static 'tracker_app/images/women-with-happy-shopping.png' %}" 
         class="img-fluid">
+        <img src="{% static 'tracker_app/images/clip-online-shopping-5.png' %}" 
+        class="img-fluid">
     </section>
+
 </div>
 
 {% endblock%}
