--- a/templates/tracker_app/confirm.html
+++ b/templates/tracker_app/confirm.html
@@ -22,16 +22,16 @@
                     <img src="{% static 'tracker_app/images/amazon.png' %}" width="32" height="32" alt="Amazon"> 
                     item is being tracked:
                 </h5>
-                {% if details.landing_image %}
+                {% if item.landing_image %}
                 <div class="d-flex justify-content-center">
                     <img class="card-img-top" style="max-height: 300px; max-width: 200px"
-                    src="{{ details.landing_image }}" alt="Landing image">
+                    src="{{ item.landing_image }}" alt="Landing image">
                 </div>
                 {% endif %}
-                <p class="card-text"><i>{{ details.item }}</i></p>
+                <p class="card-text"><i>{{ item.title }}</i></p>
                 <h5 class="card-subtitle mb-2 text-muted font-weight-bold">
                     Current price: 
-                    <span class="text-danger" style="font-size: 1.25em">${{ details.current_price }}</span>
+                    <span class="text-danger" style="font-size: 1.25em">${{ item.init_price }}</span>
                 </h5>
                 {% if item.notify_when != 'no' %}
                 <p class="card-text">You will be notified by email later when the price {{ item.notify_when}}
