--- a/templates/tracker_app/register.html
+++ b/templates/tracker_app/register.html
@@ -54,6 +54,7 @@
                     <div id="scrape-progress-wrapper" class="progress mt-3" style="display: none;">
                         <div id="scrape-progress" class="progress-bar progress-bar-striped bg-success" 
                             role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+                            <span class="text-center" style='color: #e9ecef'>Scanning the item... Please wait...</scan>
                         </div>
                     </div>
                 </form>
