hide home illust on mobile

--- a/templates/tracker_app/home.html
+++ b/templates/tracker_app/home.html
@@ -14,7 +14,7 @@
         <a class="btn btn-sm btn-dark mb-2" href="{% url 'register' %}">Get started</a>
         <a class="btn btn-sm btn-outline-dark mb-2" href="#">View tracked items</a>
     </div>
-    <div class="col-md-5 d-flex justify-content-center">
+    <div class="col-md-5 d-none d-md-flex justify-content-center">
         <img src="{% static 'tracker_app/images/clip-online-shopping-7.png' %}" 
         id="home-illustration" class="img-fluid">
     </div>
