minor email template changes

--- a/templates/emails/amazon_notify_email.html
+++ b/templates/emails/amazon_notify_email.html
@@ -143,7 +143,7 @@
         <tr>
             <td>
                 <div style="overflow:hidden;display:none;font-size:1px;color:#ffffff;line-height:1px;font-family:Arial;maxheight:0px;max-width:0px;opacity:0;">
-                    Pre-header for the newsletter template
+                    Price for the product is now ${{ current_price }}.
                 </div>
             </td>
         </tr>
@@ -255,7 +255,7 @@
                                     <td align="center" style="color: #ffffff; font-size: 14px; font-family: 'Work Sans', Calibri, sans-serif; line-height: 26px;">
 
                                         <div style="line-height: 26px;">
-                                            <a href="{{ item_url }}" style="color: #ffffff; text-decoration: none;">SHOP NOW</a>
+                                            <a href="{{ item_url }}" style="color: #ffffff; text-decoration: none;">GRAB IT NOW</a>
                                         </div>
                                         
                                     </td>
