add new case to scraper

--- a/templates/tracker_app/home.html
+++ b/templates/tracker_app/home.html
@@ -50,8 +50,8 @@
                 <div class="browser-mockup">
                     <div id="nav-tabContent" class="tab-content">
                         <div id="nav-first" role="tabpanel" aria-labelledby="nav-first-tab" class="tab-pane fade show active"><img src="{% static 'tracker_app/images/preview-1.png' %}" height="300px" alt="..." class="img-fluid"></div>
-                        <div id="nav-second" role="tabpanel" aria-labelledby="nav-second-tab" class="tab-pane fade"><img src="img/preview-2.png" alt="..." class="img-fluid"></div>
-                        <div id="nav-third" role="tabpanel" aria-labelledby="nav-third-tab" class="tab-pane fade"><img src="img/preview-1.png" alt="..." class="img-fluid"></div>
+                        <div id="nav-second" role="tabpanel" aria-labelledby="nav-second-tab" class="tab-pane fade"><img src="{% static 'tracker_app/images/preview-2.png' %}" alt="..." class="img-fluid"></div>
+                        <div id="nav-third" role="tabpanel" aria-labelledby="nav-third-tab" class="tab-pane fade"><img src="{% static 'tracker_app/images/preview-3.png' %}" alt="..." class="img-fluid"></div>
                     </div>
                 </div>
             </div>
