--- a/templates/tracker_app/register.html
+++ b/templates/tracker_app/register.html
@@ -21,7 +21,7 @@
                 </h4>
             </div>
             <div class="card-body form-group">
-                <form method="POST" onsubmit="displaySpinner()">
+                <form method="POST" onsubmit="displayProgressBar()">
                     {% csrf_token %}
                     {% for field in form %}
                         {% if field.errors %}
@@ -49,8 +49,14 @@
                         </div>
                         {% endif %}
                     {% endfor %}
+                    <div class="progress mt-3" id="progress-wrapper" style="display: none;">
+                        <div class="progress-bar btn-gradient" 
+                            id="progress-bar" role="progressbar" style="width: 0%" 
+                            aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                        </div>
+                    </div>
                     <button id="submit" class="btn btn-primary btn-shadow btn-gradient w-100 mt-3" 
-                        type="submit" onsubmit="displaySpinner()">
+                        type="submit">
                         Register
                     </button>
                     <!-- <div id="scrape-progress-wrapper" class="progress mt-3" style="display: none;">
