--- a/templates/tracker_app/tracking-error.html
+++ b/templates/tracker_app/tracking-error.html
@@ -8,10 +8,10 @@
     <div class="col-md-8 mx-auto text-center">
         <img src="https://img.icons8.com/officel/80/000000/broken-link.png"/>
         <h3 class="mb-4">We are sorry - we are unable to track this item</h3>
-        <a href="{% url 'home' %}" class="btn btn-primary btn-shadow btn-gradient">
+        <a href="{% url 'home' %}" class="btn btn-primary btn-shadow btn-gradient mb-2">
             Go to Homepage
         </a>
-        <a href="{% url 'home' %}" class="btn btn-outline-primary">
+        <a href="{% url 'home' %}" class="btn btn-outline-primary mb-2">
             Report issue
         </a>
     </div>    
