--- a/templates/emails/amazon_notify_email.html
+++ b/templates/emails/amazon_notify_email.html
@@ -306,41 +306,17 @@
 
         <tr>
             <td align="center">
-                <table border="0" align="center" width="450" cellpadding="0" cellspacing="0" class="container590">
-
+                <table border="0" align="center" width="800" cellpadding="0" cellspacing="0" class="container590">
                     <tr>
-                        <td>
-                            <table border="0" align="left" cellpadding="0" cellspacing="0" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;" class="container590">
-                                <tr>
-                                    <td align="center">
-                                        <form action="http://localhost:8000/unsubscribe/" method="POST">
-                                            {% csrf_token %}
-                                            <input type="hidden" name="id" value="1234">
-                                            <button style="font-size: 14px; font-family: 'Work Sans', Calibri, sans-serif; line-height: 24px;color: #5caad2; text-decoration: none;" type="submit">Unsubscribe from this item</button>
-                                        </form>
-                                    </td>
-                                </tr>
-
-                            </table>
-
-                            <table border="0" align="right" cellpadding="0" cellspacing="0" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;" class="container590">
-
-                                <tr>
-                                    <td align="center">
-                                        <table align="center" border="0" cellpadding="0" cellspacing="0">
-                                            <tr>
-                                                <td align="center">
-                                                    <a style="font-size: 14px; font-family: 'Work Sans', Calibri, sans-serif; line-height: 24px;color: #5caad2; text-decoration: none;" href="{{ unsub_url }}">Unsubscribe from all items</a>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </td>
-                                </tr>
-
-                            </table>
+                        <td align="center" style="font-size: 14px; font-family: 'Work Sans', Calibri, sans-serif; line-height: 24px;">
+                            <small>You are receiving this email because you registered the tracking of this item on ...</small>
                         </td>
                     </tr>
-
+                    <tr>
+                        <td align="center">
+                            <a style="font-size: 14px; font-family: 'Work Sans', Calibri, sans-serif; line-height: 24px;color: red; text-decoration: none;" href="{{unsubscribe_url}}">Unsubscribe from this item</a>
+                        </td>
+                    </tr>
                 </table>
             </td>
         </tr>
