change brand name and set up env vars

--- a/templates/emails/amazon_notify_email.html
+++ b/templates/emails/amazon_notify_email.html
@@ -9,7 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel="stylesheet">
     <!-- <![endif]-->
 
-    <title>amazonTrack Notification</title>
+    <title>Wishlisted Notification</title>
 
     <style type="text/css">
         body {
@@ -167,7 +167,7 @@
 
                                 <tr>
                                     <td align="center" height="70" style="height:70px;">
-                                        <h1 style="font-family: 'PT Sans', sans-serif; display: block; border-style: none !important; border: 0 !important;">amazonTrack</h1>
+                                        <h1 style="font-family: 'PT Sans', sans-serif; display: block; border-style: none !important; border: 0 !important;">Wishlisted</h1>
                                     </td>
                                 </tr>
                             </table>
