--- a/templates/tracker_app/base.html
+++ b/templates/tracker_app/base.html
@@ -22,7 +22,7 @@
     <!-- navbar-->
     <header class="header">
         <nav class="navbar navbar-expand-lg fixed-top">
-            <a class="navbar-brand" href="/"><h2 id="logo" style="font-family: 'PT Sans', sans-serif;">amazonTrack</h2></a>
+            <a class="navbar-brand" href="/"><h2 id="logo" style="font-family: 'PT Sans', sans-serif;">Wishlisted</h2></a>
             <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><span></span><span></span><span></span></button>
             <div id="navbarSupportedContent" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto align-items-start align-items-lg-center">
