WIS-4 item_list done

--- a/templates/tracker_app/home.html
+++ b/templates/tracker_app/home.html
@@ -14,7 +14,7 @@
                 </p>
                 <div class="CTA">
                     <a href="{% url 'register' %}" class="btn btn-primary btn-shadow btn-gradient">Get started</a>
-                    <a href="#" class="btn btn-outline-primary">View tracked items</a>
+                    <a href="{% url 'item_list' %}" class="btn btn-outline-primary">View tracked items</a>
                 </div>
             </div>
         <div class="d-none d-md-block col-lg-6 order-1 order-lg-2">
