--- a/templates/tracker_app/base.html
+++ b/templates/tracker_app/base.html
@@ -16,7 +16,9 @@
     <!-- Google fonts - Open Sans-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800">
 
-    <title>{% block title %} {% endblock %}</title>
+    {% block stylesheet %} {% endblock %}
+
+    <title>Wishlisted - {% block title %} {% endblock %}</title>
 </head>
 <body>
     <!-- navbar-->
