WIS-4 refactor item form

--- a/templates/emails/amazon_notify_email.html
+++ b/templates/emails/amazon_notify_email.html
@@ -277,7 +277,7 @@
 
                     <tr>
                         <td align="center">
-                            <a style="font-size: 14px; font-family: 'Work Sans', Calibri, sans-serif; line-height: 24px;color: #5caad2; text-decoration: none;font-weight:bold;" href="#">View price changes</a>
+                            <a style="font-size: 14px; font-family: 'Work Sans', Calibri, sans-serif; line-height: 24px;color: #5caad2; text-decoration: none;font-weight:bold;" href="{{item_details_url}}">View price changes</a>
                         </td>
                     </tr>
 
@@ -314,7 +314,7 @@
                     </tr>
                     <tr>
                         <td align="center">
-                            <a style="font-size: 14px; font-family: 'Work Sans', Calibri, sans-serif; line-height: 24px;color: red; text-decoration: none;" href="{{unsubscribe_url}}">Unsubscribe from this item</a>
+                            <a style="font-size: 14px; font-family: 'Work Sans', Calibri, sans-serif; line-height: 24px;color: lightslategrey; text-decoration: none;" href="{{unsubscribe_url}}">Unsubscribe from this item</a>
                         </td>
                     </tr>
                 </table>
