--- a/templates/tracker_app/register.html
+++ b/templates/tracker_app/register.html
@@ -21,7 +21,7 @@
                 </h4>
             </div>
             <div class="card-body form-group">
-                <form method="POST" onsubmit="displayProgressBar()">
+                <form method="POST" onsubmit="displaySpinner()">
                     {% csrf_token %}
                     {% for field in form %}
                         {% if field.errors %}
@@ -50,16 +50,12 @@
                         {% endif %}
                     {% endfor %}
 
-                    <div class="progress mt-3" id="progress-wrapper" style="display: none;">
-                        <div class="progress-bar btn-gradient" 
-                            id="progress-bar" role="progressbar" style="width: 0%" 
-                            aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-                        </div>
+                    <div id="submit-state" class="d-flex justify-content-center mt-3">
+                        <button id="submit" class="btn btn-primary btn-shadow btn-gradient w-100" 
+                            type="submit">
+                            Register
+                        </button>
                     </div>
-                    <button id="submit" class="btn btn-primary btn-shadow btn-gradient w-100 mt-3" 
-                        type="submit">
-                        Register
-                    </button>
                 </form>
             </div>
         </div>    
