--- a/templates/tracker_app/item-details.html
+++ b/templates/tracker_app/item-details.html
@@ -9,15 +9,15 @@
         <h4>{{item.title|limit_len:50}}</h4>
     </a>
     <div class="row mt-3">
-        <div class="col-lg-2"></div>
-        <div class="col-lg-8">
+        <div class="col-xl-1"></div>
+        <div class="col-xl-10">
             <article class="card d-flex justify-content-center">
                 <div class="card-body">
                     <canvas id="itemPriceChart"></canvas>
                 </div>    
             </article>        
         </div>
-        <div class="col-lg-2"></div>
+        <div class="col-xl-1"></div>
     </div>
 </section>
 {% endblock %}
