add do_scrape retry

--- a/templates/tracker_app/confirm.html
+++ b/templates/tracker_app/confirm.html
@@ -24,8 +24,7 @@
                 </div>
                 {% if item.landing_image %}
                 <div class="d-flex justify-content-center">
-                    <img class="card-img-top" style="max-height: 300px; max-width: 200px"
-                    src="{{ item.landing_image }}" alt="Landing image">
+                    <img class="card-img-top item-landing-image" src="{{ item.landing_image }}" alt="Landing image">
                 </div>
                 {% endif %}
                 <p class="card-text"><i>{{ item.title }}</i></p>
